# ret2shell

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE  README.md  biome.json  deploy-ret2shell.sh  release-image.fish  release-image.sh
.agents/skills/: deploy-ret2shell-single-node.md
.devcontainer/: 00-post-start.sh  devcontainer.json  install-deps.sh  setup-zsh.sh  up-dev.sh
.github/: dependabot.yml
.github/workflows/: binary.yml  biome-check.yml  clippy.yml  docker.yml  helm.yml  release.yml  scripts.release-image.yml  web.yml
config/: README.md  config.sample.toml
crates/auditor/: Cargo.toml
crates/auditor/src/: filter.rs  lib.rs
crates/bucket/: Cargo.toml  README.md
crates/cache/: Cargo.toml
crates/captcha/: Cargo.toml
crates/checker/: Cargo.toml
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs  lifecycle.rs  manager.rs  registry.rs  traffic.rs  traits.rs
crates/config/: Cargo.toml
crates/database/: Cargo.toml
crates/email/: Cargo.toml
crates/event/: Cargo.toml
crates/license/: Cargo.toml
crates/media/: Cargo.toml
crates/migrator/: Cargo.toml
crates/oauth/: Cargo.toml
crates/queue/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/traffic/: Cargo.toml
deploy/: compose.dev.yml  docker-compose.dev.yml  nginx.dev.conf  nginx.sample.conf
deploy/compose/: README.md  docker-compose.yml
deploy/k8s-deprecated/: 7-platform.yaml  README.md
docs/: helm-chart-plan.md
keygen/: Cargo.toml
server/: Cargo.toml
web/: .env  .eslintrc.json  .postcssrc  .prettierrc  README.md  biome.json  eslint.config.mjs  farm.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.mjs  tailwind.config.mts  tsconfig.json  vite.config.mts  vite.config.ts
web/src/: app.html  (+2 more)
(+710 files in other folders)
