[package]
name = "r2s-auditor"
version = "3.0.7"
edition = "2021"
rust-version = "1.79.0"
description = "Auditor for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
aho-corasick = "1.1"
tokio = { version = "1.39", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.19"

r2s-config = { version = "3", path = "../config" }

[lib]
path = "src/lib.rs"
