[package]
description = "Cluster manager for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-cluster"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
axum         = { workspace = true }
chrono       = { workspace = true }
deunicode    = { workspace = true }
futures-io   = { workspace = true }
k8s-openapi  = { workspace = true }
kube         = { workspace = true }
regex        = { workspace = true }
reqwest      = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
wsrx         = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
